log_rework/build_2026-03-12_16-21-43/uav_bridge/stderr.log
/home/th1rt3en/DOCO/ws/src/uav_bridge/src/mono_camera_source_node.cpp: In constructor ‘uav_bridge::MonoCameraSourceNode::MonoCameraSourceNode()’:
/home/th1rt3en/DOCO/ws/src/uav_bridge/src/mono_camera_source_node.cpp:51:32: error: no matching function for call to ‘max(int, int64_t)’
   51 |     requested_width_ = std::max(1, this->get_parameter("image_width").as_int());
      |                        ~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
In file included from /usr/include/c++/11/algorithm:61,
                 from /home/th1rt3en/DOCO/ws/src/uav_bridge/src/mono_camera_source_node.cpp:1:
/usr/include/c++/11/bits/stl_algobase.h:254:5: note: candidate: ‘template<class _Tp> constexpr const _Tp& std::max(const _Tp&, const _Tp&)’
  254 |     max(const _Tp& __a, const _Tp& __b)
      |     ^~~
/usr/include/c++/11/bits/stl_algobase.h:254:5: note:   template argument deduction/substitution failed:
/home/th1rt3en/DOCO/ws/src/uav_bridge/src/mono_camera_source_node.cpp:51:32: note:   deduced conflicting types for parameter ‘const _Tp’ (‘int’ and ‘int64_t’ {aka ‘long int’})
   51 |     requested_width_ = std::max(1, this->get_parameter("image_width").as_int());
      |                        ~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
In file included from /usr/include/c++/11/algorithm:61,
                 from /home/th1rt3en/DOCO/ws/src/uav_bridge/src/mono_camera_source_node.cpp:1:
/usr/include/c++/11/bits/stl_algobase.h:300:5: note: candidate: ‘template<class _Tp, class _Compare> constexpr const _Tp& std::max(const _Tp&, const _Tp&, _Compare)’
  300 |     max(const _Tp& __a, const _Tp& __b, _Compare __comp)
      |     ^~~
/usr/include/c++/11/bits/stl_algobase.h:300:5: note:   template argument deduction/substitution failed:
/home/th1rt3en/DOCO/ws/src/uav_bridge/src/mono_camera_source_node.cpp:51:32: note:   deduced conflicting types for parameter ‘const _Tp’ (‘int’ and ‘int64_t’ {aka ‘long int’})
   51 |     requested_width_ = std::max(1, this->get_parameter("image_width").as_int());
      |                        ~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
In file included from /usr/include/c++/11/algorithm:62,
                 from /home/th1rt3en/DOCO/ws/src/uav_bridge/src/mono_camera_source_node.cpp:1:
/usr/include/c++/11/bits/stl_algo.h:3461:5: note: candidate: ‘template<class _Tp> constexpr _Tp std::max(std::initializer_list<_Tp>)’
 3461 |     max(initializer_list<_Tp> __l)
      |     ^~~
/usr/include/c++/11/bits/stl_algo.h:3461:5: note:   template argument deduction/substitution failed:
/home/th1rt3en/DOCO/ws/src/uav_bridge/src/mono_camera_source_node.cpp:51:32: note:   mismatched types ‘std::initializer_list<_Tp>’ and ‘int’
   51 |     requested_width_ = std::max(1, this->get_parameter("image_width").as_int());
      |                        ~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
In file included from /usr/include/c++/11/algorithm:62,
                 from /home/th1rt3en/DOCO/ws/src/uav_bridge/src/mono_camera_source_node.cpp:1:
/usr/include/c++/11/bits/stl_algo.h:3467:5: note: candidate: ‘template<class _Tp, class _Compare> constexpr _Tp std::max(std::initializer_list<_Tp>, _Compare)’
 3467 |     max(initializer_list<_Tp> __l, _Compare __comp)
      |     ^~~
/usr/include/c++/11/bits/stl_algo.h:3467:5: note:   template argument deduction/substitution failed:
/home/th1rt3en/DOCO/ws/src/uav_bridge/src/mono_camera_source_node.cpp:51:32: note:   mismatched types ‘std::initializer_list<_Tp>’ and ‘int’
   51 |     requested_width_ = std::max(1, this->get_parameter("image_width").as_int());
      |                        ~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/home/th1rt3en/DOCO/ws/src/uav_bridge/src/mono_camera_source_node.cpp:52:33: error: no matching function for call to ‘max(int, int64_t)’
   52 |     requested_height_ = std::max(1, this->get_parameter("image_height").as_int());
      |                         ~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
In file included from /usr/include/c++/11/algorithm:61,
                 from /home/th1rt3en/DOCO/ws/src/uav_bridge/src/mono_camera_source_node.cpp:1:
/usr/include/c++/11/bits/stl_algobase.h:254:5: note: candidate: ‘template<class _Tp> constexpr const _Tp& std::max(const _Tp&, const _Tp&)’
  254 |     max(const _Tp& __a, const _Tp& __b)
      |     ^~~
/usr/include/c++/11/bits/stl_algobase.h:254:5: note:   template argument deduction/substitution failed:
/home/th1rt3en/DOCO/ws/src/uav_bridge/src/mono_camera_source_node.cpp:52:33: note:   deduced conflicting types for parameter ‘const _Tp’ (‘int’ and ‘int64_t’ {aka ‘long int’})
   52 |     requested_height_ = std::max(1, this->get_parameter("image_height").as_int());
      |                         ~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
In file included from /usr/include/c++/11/algorithm:61,
                 from /home/th1rt3en/DOCO/ws/src/uav_bridge/src/mono_camera_source_node.cpp:1:
/usr/include/c++/11/bits/stl_algobase.h:300:5: note: candidate: ‘template<class _Tp, class _Compare> constexpr const _Tp& std::max(const _Tp&, const _Tp&, _Compare)’
  300 |     max(const _Tp& __a, const _Tp& __b, _Compare __comp)
      |     ^~~
/usr/include/c++/11/bits/stl_algobase.h:300:5: note:   template argument deduction/substitution failed:
/home/th1rt3en/DOCO/ws/src/uav_bridge/src/mono_camera_source_node.cpp:52:33: note:   deduced conflicting types for parameter ‘const _Tp’ (‘int’ and ‘int64_t’ {aka ‘long int’})
   52 |     requested_height_ = std::max(1, this->get_parameter("image_height").as_int());
      |                         ~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
In file included from /usr/include/c++/11/algorithm:62,
                 from /home/th1rt3en/DOCO/ws/src/uav_bridge/src/mono_camera_source_node.cpp:1:
/usr/include/c++/11/bits/stl_algo.h:3461:5: note: candidate: ‘template<class _Tp> constexpr _Tp std::max(std::initializer_list<_Tp>)’
 3461 |     max(initializer_list<_Tp> __l)
      |     ^~~
/usr/include/c++/11/bits/stl_algo.h:3461:5: note:   template argument deduction/substitution failed:
/home/th1rt3en/DOCO/ws/src/uav_bridge/src/mono_camera_source_node.cpp:52:33: note:   mismatched types ‘std::initializer_list<_Tp>’ and ‘int’
   52 |     requested_height_ = std::max(1, this->get_parameter("image_height").as_int());
      |                         ~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
In file included from /usr/include/c++/11/algorithm:62,
                 from /home/th1rt3en/DOCO/ws/src/uav_bridge/src/mono_camera_source_node.cpp:1:
/usr/include/c++/11/bits/stl_algo.h:3467:5: note: candidate: ‘template<class _Tp, class _Compare> constexpr _Tp std::max(std::initializer_list<_Tp>, _Compare)’
 3467 |     max(initializer_list<_Tp> __l, _Compare __comp)
      |     ^~~
/usr/include/c++/11/bits/stl_algo.h:3467:5: note:   template argument deduction/substitution failed:
/home/th1rt3en/DOCO/ws/src/uav_bridge/src/mono_camera_source_node.cpp:52:33: note:   mismatched types ‘std::initializer_list<_Tp>’ and ‘int’
   52 |     requested_height_ = std::max(1, this->get_parameter("image_height").as_int());
      |                         ~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
gmake[2]: *** [CMakeFiles/mono_camera_source_node.dir/build.make:76: CMakeFiles/mono_camera_source_node.dir/src/mono_camera_source_node.cpp.o] Error 1
gmake[1]: *** [CMakeFiles/Makefile2:265: CMakeFiles/mono_camera_source_node.dir/all] Error 2
gmake[1]: *** Waiting for unfinished jobs....
gmake: *** [Makefile:146: all] Error 2
